setup delegate adapters

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,9 @@ dependencies {
     //Navigation
     implementation"androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation"androidx.navigation:navigation-ui-ktx:2.5.3"
+
+    //Adapter delegates
+    implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:4.3.2'
+    implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl:4.3.2'
+
 }
