setup details screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
 
     //Shimmer
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
+
+    //Slider
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 }
