--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+
     <application
         android:allowBackup="true"
         android:name=".App"
@@ -16,6 +17,7 @@
         android:theme="@style/Theme.Ecommerse"
         tools:targetApi="31">
         <activity
+            android:windowSoftInputMode="adjustPan"
             android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
